k8s/mainfests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: test
  ports:
  - protocol: TCP
    port: 4499
    targetPort: 4499
