k8s/mainfests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - <personal-domain>
    secretName: tls-cert
  ingressClassName: nginx
  rules:
  - host: <personal-domain>
    http:
      paths:
      - path: /access
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 4499
